src/main/gen/com/digitalsubstrate/dsm/parser/DSMParser.java
// This is a generated file. Not intended for manual editing.
package com.digitalsubstrate.dsm.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.digitalsubstrate.dsm.psi.DSMTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class DSMParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return dsmFile(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // ATTACHMENT LANGLE typeReference COMMA typeReference RANGLE IDENTIFIER SEMICOLON
  public static boolean attachmentDeclaration(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "attachmentDeclaration")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ATTACHMENT_DECLARATION, "<attachment declaration>");
    result_ = consumeTokens(builder_, 1, ATTACHMENT, LANGLE);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, typeReference(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, consumeToken(builder_, COMMA)) && result_;
    result_ = pinned_ && report_error_(builder_, typeReference(builder_, level_ + 1)) && result_;
    result_ = pinned_ && report_error_(builder_, consumeTokens(builder_, -1, RANGLE, IDENTIFIER, SEMICOLON)) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, DSMParser::attachmentRecover);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // MUTABLE? typeReference IDENTIFIER LPAREN parameterList? RPAREN SEMICOLON
  public static boolean attachmentFunctionDeclaration(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "attachmentFunctionDeclaration")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ATTACHMENT_FUNCTION_DECLARATION, "<attachment function declaration>");
    result_ = attachmentFunctionDeclaration_0(builder_, level_ + 1);
    result_ = result_ && typeReference(builder_, level_ + 1);
    pinned_ = result_; // pin = 2
    result_ = result_ && report_error_(builder_, consumeTokens(builder_, -1, IDENTIFIER, LPAREN));
    result_ = pinned_ && report_error_(builder_, attachmentFunctionDeclaration_4(builder_, level_ + 1)) && result_;
    result_ = pinned_ && report_error_(builder_, consumeTokens(builder_, -1, RPAREN, SEMICOLON)) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, DSMParser::attachmentFunctionRecover);
    return result_ || pinned_;
  }

  // MUTABLE?
  private static boolean attachmentFunctionDeclaration_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "attachmentFunctionDeclaration_0")) return false;
    consumeToken(builder_, MUTABLE);
    return true;
  }

  // parameterList?
  private static boolean attachmentFunctionDeclaration_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "attachmentFunctionDeclaration_4")) return false;
    parameterList(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // ATTACHMENT_FUNCTION_POOL IDENTIFIER UUID LBRACE attachmentFunctionDeclaration* RBRACE SEMICOLON
  public static boolean attachmentFunctionPoolDeclaration(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "attachmentFunctionPoolDeclaration")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ATTACHMENT_FUNCTION_POOL_DECLARATION, "<attachment function pool declaration>");
    result_ = consumeTokens(builder_, 1, ATTACHMENT_FUNCTION_POOL, IDENTIFIER, UUID, LBRACE);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, attachmentFunctionPoolDeclaration_4(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, consumeTokens(builder_, -1, RBRACE, SEMICOLON)) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, DSMParser::attachmentFunctionPoolRecover);
    return result_ || pinned_;
  }

  // attachmentFunctionDeclaration*
  private static boolean attachmentFunctionPoolDeclaration_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "attachmentFunctionPoolDeclaration_4")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!attachmentFunctionDeclaration(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "attachmentFunctionPoolDeclaration_4", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // !(NAMESPACE | FUNCTION_POOL | ATTACHMENT_FUNCTION_POOL | <<eof>>)
  static boolean attachmentFunctionPoolRecover(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "attachmentFunctionPoolRecover")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NOT_);
    result_ = !attachmentFunctionPoolRecover_0(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // NAMESPACE | FUNCTION_POOL | ATTACHMENT_FUNCTION_POOL | <<eof>>
  private static boolean attachmentFunctionPoolRecover_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "attachmentFunctionPoolRecover_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, NAMESPACE);
    if (!result_) result_ = consumeToken(builder_, FUNCTION_POOL);
    if (!result_) result_ = consumeToken(builder_, ATTACHMENT_FUNCTION_POOL);
    if (!result_) result_ = eof(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // !(MUTABLE | VOID | BOOL | INT8 | INT16 | INT32 | INT64 | UINT8 | UINT16 | UINT32 | UINT64 | FLOAT | DOUBLE | STRING | UUID_TYPE | BLOB_ID | COMMIT_ID | ANY | ANY_CONCEPT | KEY | OPTIONAL | VECTOR | SET | MAP | TUPLE | VARIANT | XARRAY | VEC | MAT | IDENTIFIER | RBRACE)
  static boolean attachmentFunctionRecover(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "attachmentFunctionRecover")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NOT_);
    result_ = !attachmentFunctionRecover_0(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // MUTABLE | VOID | BOOL | INT8 | INT16 | INT32 | INT64 | UINT8 | UINT16 | UINT32 | UINT64 | FLOAT | DOUBLE | STRING | UUID_TYPE | BLOB_ID | COMMIT_ID | ANY | ANY_CONCEPT | KEY | OPTIONAL | VECTOR | SET | MAP | TUPLE | VARIANT | XARRAY | VEC | MAT | IDENTIFIER | RBRACE
  private static boolean attachmentFunctionRecover_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "attachmentFunctionRecover_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, MUTABLE);
    if (!result_) result_ = consumeToken(builder_, VOID);
    if (!result_) result_ = consumeToken(builder_, BOOL);
    if (!result_) result_ = consumeToken(builder_, INT8);
    if (!result_) result_ = consumeToken(builder_, INT16);
    if (!result_) result_ = consumeToken(builder_, INT32);
    if (!result_) result_ = consumeToken(builder_, INT64);
    if (!result_) result_ = consumeToken(builder_, UINT8);
    if (!result_) result_ = consumeToken(builder_, UINT16);
    if (!result_) result_ = consumeToken(builder_, UINT32);
    if (!result_) result_ = consumeToken(builder_, UINT64);
    if (!result_) result_ = consumeToken(builder_, FLOAT);
    if (!result_) result_ = consumeToken(builder_, DOUBLE);
    if (!result_) result_ = consumeToken(builder_, STRING);
    if (!result_) result_ = consumeToken(builder_, UUID_TYPE);
    if (!result_) result_ = consumeToken(builder_, BLOB_ID);
    if (!result_) result_ = consumeToken(builder_, COMMIT_ID);
    if (!result_) result_ = consumeToken(builder_, ANY);
    if (!result_) result_ = consumeToken(builder_, ANY_CONCEPT);
    if (!result_) result_ = consumeToken(builder_, KEY);
    if (!result_) result_ = consumeToken(builder_, OPTIONAL);
    if (!result_) result_ = consumeToken(builder_, VECTOR);
    if (!result_) result_ = consumeToken(builder_, SET);
    if (!result_) result_ = consumeToken(builder_, MAP);
    if (!result_) result_ = consumeToken(builder_, TUPLE);
    if (!result_) result_ = consumeToken(builder_, VARIANT);
    if (!result_) result_ = consumeToken(builder_, XARRAY);
    if (!result_) result_ = consumeToken(builder_, VEC);
    if (!result_) result_ = consumeToken(builder_, MAT);
    if (!result_) result_ = consumeToken(builder_, IDENTIFIER);
    if (!result_) result_ = consumeToken(builder_, RBRACE);
    return result_;
  }

  /* ********************************************************** */
  // !(ATTACHMENT | STRUCT | CONCEPT | ENUM | CLUB | MEMBERSHIP | RBRACE)
  static boolean attachmentRecover(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "attachmentRecover")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NOT_);
    result_ = !attachmentRecover_0(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // ATTACHMENT | STRUCT | CONCEPT | ENUM | CLUB | MEMBERSHIP | RBRACE
  private static boolean attachmentRecover_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "attachmentRecover_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, ATTACHMENT);
    if (!result_) result_ = consumeToken(builder_, STRUCT);
    if (!result_) result_ = consumeToken(builder_, CONCEPT);
    if (!result_) result_ = consumeToken(builder_, ENUM);
    if (!result_) result_ = consumeToken(builder_, CLUB);
    if (!result_) result_ = consumeToken(builder_, MEMBERSHIP);
    if (!result_) result_ = consumeToken(builder_, RBRACE);
    return result_;
  }

  /* ********************************************************** */
  // TRUE | FALSE
  public static boolean booleanLiteral(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "booleanLiteral")) return false;
    if (!nextTokenIs(builder_, "<boolean literal>", FALSE, TRUE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BOOLEAN_LITERAL, "<boolean literal>");
    result_ = consumeToken(builder_, TRUE);
    if (!result_) result_ = consumeToken(builder_, FALSE);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // CLUB IDENTIFIER SEMICOLON
  public static boolean clubDeclaration(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "clubDeclaration")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CLUB_DECLARATION, "<club declaration>");
    result_ = consumeTokens(builder_, 1, CLUB, IDENTIFIER, SEMICOLON);
    pinned_ = result_; // pin = 1
    exit_section_(builder_, level_, marker_, result_, pinned_, DSMParser::clubRecover);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // !(CLUB | MEMBERSHIP | STRUCT | CONCEPT | ENUM | ATTACHMENT | RBRACE)
  static boolean clubRecover(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "clubRecover")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NOT_);
    result_ = !clubRecover_0(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // CLUB | MEMBERSHIP | STRUCT | CONCEPT | ENUM | ATTACHMENT | RBRACE
  private static boolean clubRecover_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "clubRecover_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, CLUB);
    if (!result_) result_ = consumeToken(builder_, MEMBERSHIP);
    if (!result_) result_ = consumeToken(builder_, STRUCT);
    if (!result_) result_ = consumeToken(builder_, CONCEPT);
    if (!result_) result_ = consumeToken(builder_, ENUM);
    if (!result_) result_ = consumeToken(builder_, ATTACHMENT);
    if (!result_) result_ = consumeToken(builder_, RBRACE);
    return result_;
  }

  /* ********************************************************** */
  // CONCEPT IDENTIFIER conceptInheritance? SEMICOLON
  public static boolean conceptDeclaration(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "conceptDeclaration")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CONCEPT_DECLARATION, "<concept declaration>");
    result_ = consumeTokens(builder_, 1, CONCEPT, IDENTIFIER);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, conceptDeclaration_2(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, SEMICOLON) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, DSMParser::conceptRecover);
    return result_ || pinned_;
  }

  // conceptInheritance?
  private static boolean conceptDeclaration_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "conceptDeclaration_2")) return false;
    conceptInheritance(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // IS_A IDENTIFIER
  public static boolean conceptInheritance(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "conceptInheritance")) return false;
    if (!nextTokenIs(builder_, IS_A)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, IS_A, IDENTIFIER);
    exit_section_(builder_, marker_, CONCEPT_INHERITANCE, result_);
    return result_;
  }

  /* ********************************************************** */
  // !(CONCEPT | STRUCT | ENUM | CLUB | MEMBERSHIP | ATTACHMENT | RBRACE)
  static boolean conceptRecover(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "conceptRecover")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NOT_);
    result_ = !conceptRecover_0(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // CONCEPT | STRUCT | ENUM | CLUB | MEMBERSHIP | ATTACHMENT | RBRACE
  private static boolean conceptRecover_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "conceptRecover_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, CONCEPT);
    if (!result_) result_ = consumeToken(builder_, STRUCT);
    if (!result_) result_ = consumeToken(builder_, ENUM);
    if (!result_) result_ = consumeToken(builder_, CLUB);
    if (!result_) result_ = consumeToken(builder_, MEMBERSHIP);
    if (!result_) result_ = consumeToken(builder_, ATTACHMENT);
    if (!result_) result_ = consumeToken(builder_, RBRACE);
    return result_;
  }

  /* ********************************************************** */
  // EQ literalValue
  public static boolean defaultValue(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "defaultValue")) return false;
    if (!nextTokenIs(builder_, EQ)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, EQ);
    result_ = result_ && literalValue(builder_, level_ + 1);
    exit_section_(builder_, marker_, DEFAULT_VALUE, result_);
    return result_;
  }

  /* ********************************************************** */
  // topLevelDeclaration*
  static boolean dsmFile(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dsmFile")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!topLevelDeclaration(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "dsmFile", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ENUM IDENTIFIER LBRACE enumValueList RBRACE SEMICOLON
  public static boolean enumDeclaration(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "enumDeclaration")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ENUM_DECLARATION, "<enum declaration>");
    result_ = consumeTokens(builder_, 1, ENUM, IDENTIFIER, LBRACE);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, enumValueList(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, consumeTokens(builder_, -1, RBRACE, SEMICOLON)) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, DSMParser::enumRecover);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // !(ENUM | STRUCT | CONCEPT | CLUB | MEMBERSHIP | ATTACHMENT | RBRACE)
  static boolean enumRecover(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "enumRecover")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NOT_);
    result_ = !enumRecover_0(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // ENUM | STRUCT | CONCEPT | CLUB | MEMBERSHIP | ATTACHMENT | RBRACE
  private static boolean enumRecover_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "enumRecover_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, ENUM);
    if (!result_) result_ = consumeToken(builder_, STRUCT);
    if (!result_) result_ = consumeToken(builder_, CONCEPT);
    if (!result_) result_ = consumeToken(builder_, CLUB);
    if (!result_) result_ = consumeToken(builder_, MEMBERSHIP);
    if (!result_) result_ = consumeToken(builder_, ATTACHMENT);
    if (!result_) result_ = consumeToken(builder_, RBRACE);
    return result_;
  }

  /* ********************************************************** */
  // identifierOrKeyword
  public static boolean enumValueDecl(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "enumValueDecl")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ENUM_VALUE_DECL, "<enum value decl>");
    result_ = identifierOrKeyword(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }
